# carpenter-linux

./: .gitignore  Dockerfile  LICENSE  README.md  install.sh  pyproject.toml
carpenter_linux/: __init__.py  __main__.py  platform.py
docker/: .env.example  compose.yml  config.yaml
tools/: setup-dev-server-split.sh
user_stories/: framework.py  get_story_timeout.py  runner.py  s001_describe_abilities.py  s002_workflow_three_messages.py  s003_add_skill_and_use_it.py  s004_add_use_delete_skill.py  s005_add_platform_tool.py  s006_remind_me_at_time.py  s007_add_revise_and_remove_action_tool.py  s008_change_config_value.py  s009_discover_and_change_config.py  s010_platform_restart.py  s011_french_user_config.py  s012_chat_language_config.py  s013_recurring_cron_setup_and_cancel.py  s014_local_provider_spinup.py  s015_external_repo_setup.py  s016_external_code_change_pr.py  s017_webhook_pr_review.py  s018_change_model_via_chat.py  s019_taint_boundary_enforcement.py  s020_narrow_scope_and_cancel.py  s021_check_on_autonomous_work.py  s022_iterative_bug_fix.py  s023_vague_rejection_rethink.py  s024_investigate_failure.py  s025_self_modify_review_strictness.py  s026_recall_preference_from_prior_conversation.py  s027_learn_pattern_and_create_skill.py  s028_reflection_proposes_schedule.py  s029_summarize_untrusted_web_content.py  s030_webhook_prompt_injection.py  s031_monitor_api_on_schedule.py  s032_non_technical_user_config.py  s033_recover_from_failed_arc.py  s034_interrupt_with_urgent_task.py  s035_co_author_document_via_review.py  s036_multiple_reviews_queued.py  (+12 more)
(+15 files in other folders)
